IRtest_out/69_expr_eval.err
irs/69_expr_eval.ll:1330:12: error: expected instruction opcode
  %v2369 = not i32 %v2368
           ^
1 error generated.
